[feat] : navigationId 조회 개선